--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
+    "gulp-html-replace": "^1.5.5",
+    "gulp-react": "^3.1.0",
     "lodash": "^3.10.1",
     "nconf": "^0.7.2",
     "winston": "^1.0.1"
